FIXED: hero section's alignment

--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -1,6 +1,14 @@
 :root {
     --speed: 2s;
 }
+.bush {
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    top: 100vh;
+}
 
 
 .hero {
@@ -8,7 +16,7 @@
     height: 100vh;
     // justify-content: center;
     overflow: hidden;
-    overflow-y: visible;
+    // overflow-y: visible;
 
     img {
         position: absolute;
@@ -78,9 +86,6 @@
         animation: forwards var(--speed) layer1;
     }
 
-    .bush {
-        transform: translateX(-50%) translateY(20%);
-    }
 
     .bushInverted {
         transform: translateX(-50%) translateY(80%) rotateX(180deg);
@@ -208,7 +213,7 @@
     position: relative;
     height: 100vh;
     overflow: hidden;
-    overflow-y: visible;
+    // overflow-y: visible;
     
     img {
         transition-delay: 5.25s;
